// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppDetailModalInner should match a snapshot 1`] = `
<Fragment>
  <Component
    afterClose={[MockFunction]}
    title=""
  />
  <Component
    body={
      <React.Fragment>
        <Unknown
          heading=""
          image={
            <img
              className="image"
              src="https://bulma.io/images/placeholders/48x48.png"
            />
          }
          subHeading={
            <React.Fragment>
              
            </React.Fragment>
          }
        >
          <div>
            <Unknown />
          </div>
        </Unknown>
        <React.Fragment>
          <p>
            App Information
          </p>
          <div>
            <p>
              Client ID:
            </p>
            <p />
          </div>
          <div>
            <p>
              Status:
            </p>
            <p>
              Not listed
            </p>
            <FaTimes />
          </div>
        </React.Fragment>
        <br />
        <Unknown
          html=""
        />
        <br />
        <Unknown>
          Permissions requested
        </Unknown>
        <Unknown
          isMultiLine={true}
        />
      </React.Fragment>
    }
  />
  <Component />
</Fragment>
`;

exports[`SlickButtonNav should match snapshot 1`] = `
<button
  currentSlide=""
  setAppDetailModalStateInstall={[MockFunction]}
  slideCount={[MockFunction]}
>
  <div>
    mockComponent
  </div>
</button>
`;

exports[`renderShowApiKeyForWebComponent should match snapshot and return null 1`] = `<div />`;

exports[`renderShowApiKeyForWebComponent should match snapshot and return null 2`] = `<div />`;

exports[`renderShowApiKeyForWebComponent should match snapshot and return null 3`] = `<div />`;

exports[`renderShowApiKeyForWebComponent should match snapshot not show api key 1`] = `
<div>
  <Component
    className="mb-0"
  >
    API key
  </Component>
  <p>
    To obtain your unique API key, click on 'Show API Key' below. For installation instructions, please click here
  </p>
  <span>
    Authentication:
  </span>
   
  <span>
    <a
      onClick={[Function]}
    >
      <u>
        Show
         API key
      </u>
    </a>
  </span>
</div>
`;

exports[`renderShowApiKeyForWebComponent should match snapshot return null 1`] = `<div />`;

exports[`renderShowApiKeyForWebComponent should match snapshot when isWebComponent 1`] = `
<div>
  <Component
    className="mb-0"
  >
    API key
  </Component>
  <p>
    To obtain your unique API key, click on 'Show API Key' below. For installation instructions, please click here
  </p>
  <span>
    Authentication:
  </span>
   
  <span>
    <a
      onClick={[Function]}
    >
      <u>
        Hide
         API key
      </u>
    </a>
  </span>
  <CopyToClipboard
    onCopy={[Function]}
    text="mockApiKey"
  >
    <div
      className="control has-icons-right"
    >
      <input
        className="input is-primary"
        id="apiKey"
        name="apiKey"
        readOnly={true}
        type="text"
        value="mockApiKey"
      />
      <span
        className="icon is-right"
      >
        <FaCopy />
      </span>
    </div>
  </CopyToClipboard>
</div>
`;
